src/objects/Crew_Member_Competency__c.object
<CustomObject>
    <fields>
        <fullName>Competency__c</fullName>
        <label>Competency</label>
        <referenceTo>Competency__c</referenceTo>
        <relationshipLabel>Crew Member Competencies</relationshipLabel>
        <relationshipName>Crew_Member_Competencies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Crew_Member__c</fullName>
        <label>Crew Member</label>
        <referenceTo>Crew_Member__c</referenceTo>
        <relationshipLabel>Crew Member Competencies</relationshipLabel>
        <relationshipName>Crew_Member_Competencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Latest_Certification_Date__c</fullName>
        <description>Latest Certification Date</description>
        <inlineHelpText>Latest Certification Date</inlineHelpText>
        <label>Latest Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refresh_Freq_Years__c</fullName>
        <description>Refresh frequency in years</description>
        <inlineHelpText>Refresh frequency in years</inlineHelpText>
        <label>Refresh Freq. Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Crew Member Competency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Crew_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Comp-{000}</displayFormat>
        <label>Crew Member Competency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Member Competencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>